# Klemmgine2

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  README.md  test.kscn
.github/workflows/: build.yml  release.yml  spell_check.yml
Dependencies/: miniz.cmake
Engine/: projects.json  settings.json
Engine/Config/: settings.json
Engine/Config/Layout/: lastLayout.k2b
Engine/Editor/: DefaultPlugins.k2t
Engine/Editor/Documentation/: Engine.Input.json  Engine.Physics.json  Engine.Serialize.json  Engine.Sound.json  Engine.json
Engine/Editor/Themes/: Catppuccin.k2t  Dark.k2t  Light.k2t  Solarized.k2t  Windows 10 Dark.k2t  Windows 10.k2t
Engine/Editor/UI/: Common.kui  ConsolePanel.kui  DialogWindow.kui  EditorPanel.kui  ItemBrowser.kui  Launcher.kui  LoadingBar.kui  MaterialEditor.kui  MenuBar.kui  NewProjectWindow.kui  ObjectListPanel.kui  PropertyPanel.kui  ServerConnectionPanel.kui  StatusBar.kui  Theme.kui  Toolbar.kui
Engine/Resources/shader/: basic.frag  basic.vert  drawToWindow.frag  engine.common.frag  engine.common.glsl  engine.common.vert  postProcess.vert  shadow.frag  shadow.geom  shadow.vert  sky.frag
Engine/Resources/ui/: colorPicker.frag  ui_hole.frag
EngineSource/: Resources.rc  main.cpp  resource.h
EngineSource/Core/: BoundingBox.h  Closeable.h  Event.h  LaunchArgs.cpp  LaunchArgs.h  Log.cpp  Log.h  StringUtil.cpp  StringUtil.h  ThreadMessages.cpp  ThreadMessages.h  ThreadPool.cpp  ThreadPool.h  Transform.cpp  Transform.h  Types.h  Vector.cpp  Vector.h
EngineSource/Core/Archive/: Archive.cpp  Archive.h  ArchiveStreamReader.h
EngineSource/Core/Error/: EngineAssert.cpp  EngineAssert.h  EngineError.cpp  EngineError.h  StackTrace.cpp  StackTrace.h
EngineSource/Core/File/: BinarySerializer.cpp  BinarySerializer.h  BinaryStream.cpp  BinaryStream.h  BitStreamReader.h  FileUtil.cpp  FileUtil.h  JsonSerializer.cpp  JsonSerializer.h  SerializedData.cpp  SerializedData.h  TextSerializer.cpp  TextSerializer.h
EngineSource/Core/Networking/: Http.cpp  Http.h  HttpWebSocket.cpp  HttpWebSocket.h
EngineSource/Core/Platform/: CodeAnalysis.h  FileWatcher.cpp  FileWatcher.h  Pipe.cpp  Pipe.h  Platform.cpp  Platform.h
EngineSource/Editor/: AssetListProvider.h  Editor.cpp  Editor.h  EditorSettings.h  EditorSubsystem.cpp  EditorSubsystem.h  FileAssetListProvider.cpp  FileAssetListProvider.h  ModelConverter.cpp  ModelConverter.h  ProjectFile.cpp  ProjectFile.h
EngineSource/Editor/Launcher/: CreateProjectWindow.cpp  CreateProjectWindow.h  EditorLauncher.cpp  EditorLauncher.h  LauncherProject.cpp  LauncherProject.h  OpenLauncher.cpp  OpenLauncher.h
EngineSource/Editor/Server/: EditorServerSubsystem.cpp  EditorServerSubsystem.h  ServerAssetsProvider.cpp  ServerAssetsProvider.h  ServerConnectDialog.cpp  ServerConnectDialog.h  ServerConnection.cpp  ServerConnection.h  ServerResourceSource.cpp  ServerResourceSource.h  ServerScriptsProvider.cpp  ServerScriptsProvider.h
EngineSource/Editor/Settings/: ConsoleSettings.cpp  ConsoleSettings.h  EditorSettings.cpp  EditorSettings.h  GraphicsSettings.cpp  GraphicsSettings.h  InterfaceSettings.cpp  InterfaceSettings.h  ScriptSettings.cpp  ScriptSettings.h  SettingsCategory.cpp  SettingsCategory.h
EngineSource/Editor/UI/: CodeEditorTheme.cpp  CodeEditorTheme.h  DropdownMenu.cpp  DropdownMenu.h  EditorIcons.cpp  EditorIcons.h  EditorTheme.cpp  EditorTheme.h  EditorUI.cpp  EditorUI.h  EngineTextEditorProvider.cpp  EngineTextEditorProvider.h  KeyboardShortcut.cpp  KeyboardShortcut.h  ScriptEditorContext.cpp  ScriptEditorContext.h  ScriptEditorProvider.cpp  ScriptEditorProvider.h  ScriptMiniMap.cpp  ScriptMiniMap.h
EngineSource/Engine/: Console.cpp  Console.h  Engine.cpp  Engine.h  Input.cpp  Input.h  LaunchArgs.cpp  LaunchArgs.h  Log.cpp  Log.h  MainThread.cpp  MainThread.h  ProjectFile.cpp  ProjectFile.h  Scene.cpp  Scene.h  Stats.cpp  Stats.h  StringUtil.cpp  StringUtil.h  ThreadPool.cpp  ThreadPool.h  Transform.cpp  Transform.h  Types.h  Vector.cpp  Vector.h  Version.cpp  Version.h
EngineSource/Engine/Debug/: DebugDraw.cpp  DebugDraw.h  TimeLogger.cpp  TimeLogger.h
EngineSource/Engine/Editor/: Assets.cpp  Assets.h  Editor.cpp  (+3 more)
EngineSource/Natvis/: Core.natvis  Engine.natvis
Plugins/CSharp/: CMakeLists.txt  CSharp.sln  FindSdk.cmake  Plugin.k2p
Plugins/CSharp/Engine/: Engine.csproj  Log.cs  SceneObject.cs  Stats.cs  Vector.cs
Plugins/CSharp/Engine.Aot/: AotEntryPoint.cs  AotObjects.cs  Engine.Aot.csproj  app.manifest
Plugins/CSharp/Engine.Core/: Engine.Core.csproj  Native.cs  ObjectTypes.cs
Plugins/CSharp/Engine/Async/: EngineAsync.cs  EngineAsyncContext.cs  EngineAsyncTasks.cs
Plugins/CSharp/Engine/Components/: MeshComponent.cs  ObjectComponent.cs
Plugins/CSharp/Engine/Editor/: Editor.cs
Plugins/CSharp/Engine/Internal/: EngineInternal.cs
Plugins/CSharp/Engine/Native/: Native.cs  NativeFunctions.cs
Plugins/CSharp/Loader/: CSharpLoader.h  CSharpLoaderAot.cpp  CSharpLoaderAot.h  CSharpLoaderRuntime.cpp  CSharpLoaderRuntime.h  Functions.h  Plugin.cpp  Resources.rc  Utils.cpp  Utils.h
Plugins/DebugUI/: CMakeLists.txt  Plugin.k2p
Plugins/DebugUI/Source/: Plugin.cpp  Resources.rc
Plugins/HelloWorldPlugin/: CMakeLists.txt  Plugin.cpp
Plugins/PluginInterface/: CMakeLists.txt
Plugins/PluginInterface/Include/c/: KlemmginePlugin.h
Plugins/PluginInterface/Include/cpp/: KlemmginePlugin.hpp
Plugins/PluginInterface/Include/internal/: InterfaceDefines.hpp  InterfaceStruct.hpp  PluginCanvas.hpp
Plugins/PluginInterface/Source/: KlemmginePlugin.cpp
Script/: Class1.cs  Project.csproj  Project.sln
Scripts/: player.kui  test.ds  test.lang  test2.ds
Tools/CrossCompile/: WindowsArm64_Hostx64.cmake  Windowsx64_HostArm64.cmake
Tools/ProjCompiler/: CMakeLists.txt
Tools/ProjCompiler/Source/: Plugins.cpp  Plugins.h  ToArchives.cpp  ToArchives.h  main.cpp
Tools/Tests/: CMakeLists.txt
Tools/Tests/Include/: EngineTest.h
Tools/Tests/Tests/: TestFile.cpp  TestPlatform.cpp  TestSerialize.cpp
Tools/UtilLib/: CMakeLists.txt
(+412 files in other folders)
